--- a/src/pages/credits.astro
+++ b/src/pages/credits.astro
@@ -14,5 +14,6 @@ const pageTitle = "Index";
     <li><a href="https://codepen.io/Umer_Farooq/pen/eYJgKGN">Light/Dark Toggle Button</a></li>
     <li><a href="https://petrapixel.neocities.org">Coding Tutorials</a> by PetraPixel</li>
     <li><a href="https://codepen.io/ravid7000/pen/ENeaRM">Pure CSS Navigation</a> by Ravi Dhiman</li>
+    <li><a href="https://codepen.io/shieldsma91/pen/zLpbLX">Mobile Nav</a> by Mel Shields</li>
   </ul>
 </InsectSplashLayout>
