--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,8 @@
 ---
+import TocNavbar from "./TocNavbar.astro"
 ---
 <header class="topnav">
+    <div class="toc"><TocNavbar /></div>
     <div class="logo">skolomorphic</div>
     <div class="mainlinkstoggle">
         <input type="checkbox" id="togglemenu">
@@ -27,8 +29,8 @@
     display: grid;
     grid-gap: 10px;
     grid-template: 
-        "logo links toggle"
-        / minmax(100px, 1fr) minmax(500px, 80ch) minmax(100px, 1fr);
+        "toc logo links toggle"
+        / fit-content(50px) minmax(100px, 1fr) minmax(500px, 80ch) minmax(100px, 1fr);
 }
 
 .mainlinkstoggle {
@@ -42,8 +44,8 @@
     display: none;
 }
 
-#togglemenu-label {
-
+.toc {
+    grid-area: toc;
 }
 
 /** NAVLINKS BASE */
@@ -125,9 +127,9 @@
 @media screen and (max-width: 1100px) {
     .topnav {
         grid-template: 
-            "logo"
-            "links"
-            / 1fr;
+            "toc logo toggle"
+            "link links links"
+            / fit-content(100px) 1fr fit-content(100px);
         position: relative;
     }
 }
