render list in toc

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,12 @@
 ---
 import TocNavbar from "./TocNavbar.astro"
+const { collectionName, headingsName } = Astro.props;
 ---
 <header class="topnav">
-    <div class="toc"><TocNavbar /></div>
+    <div class="toc">
+        <TocNavbar collectionName={collectionName}
+            headingsName={headingsName} />
+    </div>
     <div class="logo">skolomorphic</div>
     <div class="mainlinkstoggle">
         <input type="checkbox" id="togglemenu">
