--- a/src/components/TocNavbar.astro
+++ b/src/components/TocNavbar.astro
@@ -124,4 +124,10 @@ const collection = await getCollection(collectionName);
     height: 100%;
     overflow: auto;
 }
+
+@media screen and (prefers-color-scheme: dark) {
+  #menuToggle span {
+    background: var(--accent-dark);
+  }
+}
  </style>
