--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -3,16 +3,23 @@ const { title } = Astro.props;
 ---
 <div id="comments">
     <h1 class="comment-header">Comments</h1>
-    <!-- <div class="commentbox"></div>
-    <script is:inline src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
-    <script is:inline>commentBox('5759568818733056-proj')</script> -->
-    <div id="cusdis_thread"
-        data-host="https://cusdis.com"
-        data-app-id="30c5b5ed-36a7-4e9a-b102-12c5aa2b886f"
-        data-page-id={Astro.url.pathname}
-        data-page-url={Astro.url}
-        data-page-title={title}
-    ></div>
+    <div class="notice">
+        <p>Hi! If you'd like to leave a comment, anonymously or no, all you need is an email and password. 
+            You can also link it to your other social media accounts, except Twitter, because the Twitter API is quite broken.</p>
+        <p>I look forward to hearing from you.</p>
+        <p>Thanks for visiting my page!</p>
+    </div>
+    <div class="commentbox"></div>
+    <script is:inline data-astro-rerun src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
+    <script is:inline data-astro-rerun>commentBox('5759568818733056-proj');</script>
+    <!-- <div id="cusdis-wrapper">
+        <div id="cusdis_thread"
+            data-host="https://cusdis.com"
+            data-app-id="30c5b5ed-36a7-4e9a-b102-12c5aa2b886f"
+            data-page-id={Astro.url.pathname}
+            data-page-url={Astro.url}
+            data-page-title={title}></div>
+    </div>
     <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
     <script is:inline data-astro-rerun>
         function reloadComments() {
@@ -31,7 +38,7 @@ const { title } = Astro.props;
         }
         document.addEventListener("astro:after-swap", function () { reloadComments(); });
         window.addEventListener('load', function () { fixIframe(); });
-    </script>
+    </script> -->
 </div>
 <style>     
 #comments {
@@ -39,5 +46,20 @@ const { title } = Astro.props;
 }
 .comment-header {
     border-bottom: 1px solid var(--accent-light);
+}
+.notice {
+    padding: 10px;
+    font-size: 14px;
+    font-family: 'Source Code Pro', 'Courier New', Courier, monospace;
+    border-radius: 3px;
+    background-color: var(--accent-ultralight);
+    margin-bottom: 10px;
+}
+.notice p {
+    margin-top: 0;
+    margin-bottom: 14px;
+}
+.notice p:last-child {
+    margin-bottom: 0;
 }
 </style>
