--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -9,9 +9,11 @@ const { title } = Astro.props;
         <p>I look forward to hearing from you.</p>
         <p>Thanks for visiting my page!</p>
     </div>
-    <div class="commentbox"></div>
-    <script is:inline data-astro-rerun src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
-    <script is:inline data-astro-rerun>commentBox('5759568818733056-proj');</script>
+    <div class="commentbox-wrapper">
+        <div class="commentbox"></div>
+        <script is:inline data-astro-rerun src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
+        <script is:inline data-astro-rerun>commentBox('5759568818733056-proj');</script>
+    </div>
     <!-- <div id="cusdis-wrapper">
         <div id="cusdis_thread"
             data-host="https://cusdis.com"
@@ -61,5 +63,10 @@ const { title } = Astro.props;
 }
 .notice p:last-child {
     margin-bottom: 0;
+}
+.commentbox-wrapper {
+    padding: 5px;
+    background-color: var(--commentbox-wrapper);
+    border-radius: 5px;
 }
 </style>
