increase subtext contrast

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
     <div class="commentbox-wrapper">
         <div class="commentbox"></div>
         <script is:inline data-astro-rerun src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
-        <script is:inline data-astro-rerun>commentBox('5759568818733056-proj');</script>
+        <script is:inline data-astro-rerun>commentBox('5759568818733056-proj', { subtextColor: '#461905'});</script>
     </div>
     <!-- <div id="cusdis-wrapper">
         <div id="cusdis_thread"
