--- a/src/components/ChapterNav.astro
+++ b/src/components/ChapterNav.astro
@@ -56,7 +56,7 @@ const nextText = chapter >= size ? "Back to Index" : `Chapter ${chapter + 1}`;
     margin: auto 10px;
 }
 
-@media screen and (max-width: 550) {
+@media screen and (max-width: 550px) {
     .chapternavtext  {
         font-size: 24px;
         line-height: 24px;
