add noto sans support

--- a/src/components/ReaderControls.astro
+++ b/src/components/ReaderControls.astro
@@ -29,6 +29,7 @@ import DarkModeToggle from "./DarkModeToggle.astro"
             <button type="button" class="changeTimes"><span style="font-family: 'Times New Roman', serif;">Times</span></button>
             <button type="button" class="changeGaramond"><span style="font-family: Garamond, serif;">Garamond</span></button>
             <button type="button" class="changeTahoma"><span style="font-family: Tahoma, sans-serif;">Tahoma</span></button>
+            <button type="button" class="changeNoto"><span style="font-family: 'Noto Sans', sans-serif;">Noto Sans</span></button>
         </div>
         <div class="control-section"><b>Toggle theme:</b> <DarkModeToggle /></div>
         <div class="control-wrapper"><button type="button" class="restoreDefaults">Restore Defaults</button></div>
