modify comment section desc

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -5,8 +5,7 @@ const pathName = Astro.url.pathname;
 <div id="comments">
     <h1 class="comment-header">Comments</h1>
     <div class="notice">
-        <p>Hi! If you'd like to leave a comment, anonymously or no, all you need is an email and password. 
-            You can also link it to your other social media accounts, except Twitter, because the Twitter API is quite broken.</p>
+        <p>Hi! If you'd like to share your thoughts or ask a question, you can come visit me on <a href="http://skolomorphic.tumblr.com/">tumblr</a> or leave a comment below.</p>
         <p>I look forward to hearing from you.</p>
         <p>Thanks for visiting my page!</p>
     </div>
