fix z index overlap with comments section

--- a/src/components/ReaderControls.astro
+++ b/src/components/ReaderControls.astro
@@ -67,6 +67,7 @@ import DarkModeToggle from "./DarkModeToggle.astro"
     bottom: 0;
     right: 0;
     padding: 0.5rem;
+    z-index: 7;
 }
 .control-wrapper {
     display: flex;
