--- a/src/layouts/BookLayout.astro
+++ b/src/layouts/BookLayout.astro
@@ -6,10 +6,10 @@ import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import BookFooter from "../components/BookFooter.astro";
 const { frontmatter, postsize, collectionName, headingsName } = Astro.props;
-const allPages = Object.values(import.meta.glob('./*.md', { eager: true }));
+const collection = collectionName ? collectionName : frontmatter.collectionName;
 ---
 <BaseLayout pageTitle={frontmatter.title}>
-    <Header collectionName={collectionName} headingsName={headingsName} />
+    <Header collectionName={collection} headingsName={headingsName} />
     <ReaderControls />
     <script>
         import "../scripts/readerControls.js";
